Fix 'Image is too wide'

--- a/demo/peacock/src/pages/catalog/pdp.css
+++ b/demo/peacock/src/pages/catalog/pdp.css
@@ -87,7 +87,7 @@
 
 @media (--large) {
   .gallery {
-    width: 702px;
+    width: 596px;
     flex: none;
   }
 
